// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoteController (e2e) > GET /latest 1`] = `
{
  "data": {
    "allow_comment": true,
    "bookmark": false,
    "comments_index": 0,
    "count": {
      "like": 0,
      "read": 0,
    },
    "created": "2021-03-20T00:00:00.000Z",
    "images": [],
    "is_published": true,
    "modified": null,
    "nid": 20,
    "text": "Content 20",
    "title": "Note 20",
    "topic": null,
  },
  "next": {
    "nid": 19,
  },
}
`;

exports[`NoteController (e2e) > GET /list/:id 1`] = `
{
  "data": [
    {
      "created": "2023-01-17T11:01:57.851Z",
      "nid": 21,
      "title": "Note 2 (updated)",
    },
    {
      "created": "2021-03-20T00:00:00.000Z",
      "nid": 20,
      "title": "Note 20",
    },
    {
      "created": "2021-03-19T00:00:00.000Z",
      "nid": 19,
      "title": "Note 19",
    },
    {
      "created": "2021-03-18T00:00:00.000Z",
      "nid": 18,
      "title": "Note 18",
    },
    {
      "created": "2021-03-17T00:00:00.000Z",
      "nid": 17,
      "title": "Note 17",
    },
  ],
  "size": 5,
}
`;

exports[`NoteController (e2e) > GET /notes 1`] = `
{
  "data": [
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-20T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 20,
      "text": "Content 20",
      "title": "Note 20",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-19T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 19,
      "text": "Content 19",
      "title": "Note 19",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-18T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 18,
      "text": "Content 18",
      "title": "Note 18",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-17T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 17,
      "text": "Content 17",
      "title": "Note 17",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-16T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 16,
      "text": "Content 16",
      "title": "Note 16",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-15T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 15,
      "text": "Content 15",
      "title": "Note 15",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-14T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 14,
      "text": "Content 14",
      "title": "Note 14",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-13T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 13,
      "text": "Content 13",
      "title": "Note 13",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-12T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 12,
      "text": "Content 12",
      "title": "Note 12",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-11T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 11,
      "text": "Content 11",
      "title": "Note 11",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-10T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 10,
      "text": "Content 10",
      "title": "Note 10",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-09T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 9,
      "text": "Content 9",
      "title": "Note 9",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-08T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 8,
      "text": "Content 8",
      "title": "Note 8",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-07T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 7,
      "text": "Content 7",
      "title": "Note 7",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-06T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 6,
      "text": "Content 6",
      "title": "Note 6",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-05T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 5,
      "text": "Content 5",
      "title": "Note 5",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-04T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 4,
      "text": "Content 4",
      "title": "Note 4",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-03T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 3,
      "text": "Content 3",
      "title": "Note 3",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-02T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 2,
      "text": "Content 2",
      "title": "Note 2",
      "topic": null,
    },
    {
      "allow_comment": true,
      "bookmark": false,
      "comments_index": 0,
      "count": {
        "like": 0,
        "read": 0,
      },
      "created": "2021-03-01T00:00:00.000Z",
      "images": [],
      "is_published": true,
      "meta": null,
      "modified": null,
      "nid": 1,
      "text": "Content 1",
      "title": "Note 1",
      "topic": null,
    },
  ],
  "pagination": {
    "current_page": 1,
    "has_next_page": false,
    "has_prev_page": false,
    "size": 20,
    "total": 20,
    "total_page": 1,
  },
}
`;

exports[`NoteController (e2e) > GET /notes/nid/:nid 1`] = `
{
  "data": {
    "allow_comment": true,
    "bookmark": false,
    "comments_index": 0,
    "count": {
      "like": 0,
      "read": 0,
    },
    "created": "2023-01-17T11:01:57.851Z",
    "images": [],
    "is_published": true,
    "liked": true,
    "mood": "happy",
    "nid": 21,
    "text": "Content 2 (updated)",
    "title": "Note 2 (updated)",
    "topic": null,
    "weather": "sunny",
  },
  "next": {
    "created": "2021-03-20T00:00:00.000Z",
    "modified": null,
    "nid": 20,
    "title": "Note 20",
  },
  "prev": null,
}
`;

exports[`NoteController (e2e) > Get patched note 1`] = `
{
  "allow_comment": true,
  "bookmark": false,
  "comments_index": 0,
  "count": {
    "like": 0,
    "read": 0,
  },
  "created": "2023-01-17T11:01:57.851Z",
  "images": [],
  "is_published": true,
  "mood": "happy",
  "nid": 21,
  "text": "Content 2 (updated)",
  "title": "Note 2 (updated)",
  "weather": "sunny",
}
`;

exports[`NoteController (e2e) > POST /notes 1`] = `
{
  "allow_comment": true,
  "bookmark": false,
  "comments_index": 0,
  "count": {
    "like": 0,
    "read": 0,
  },
  "created": "2023-01-17T11:01:57.851Z",
  "images": [],
  "is_published": true,
  "meta": null,
  "modified": null,
  "nid": 21,
  "text": "Content 2",
  "title": "Note 2",
  "topic": null,
}
`;
